# Ara25

./: .gitattributes  .gitignore  CITATION.cff  README.md  requirements-colab.txt  requirements.txt
.github/workflows/: ci.yml
Ara25/: LICENSE  README.md  pyproject.toml
Ara25/configs/: models.yaml
Ara25/data/: README.md  evaluation_audit.json
Ara25/data/sample/: synthetic_sample.jsonl
Ara25/docs/: Ara25_Technical_Report.docx  DATASET_CARD.md  REPRODUCIBILITY.md
Ara25/notebooks/: Ara25_AraBERT.ipynb  Ara25_LED.ipynb  Ara25_mT5.ipynb  README.md
Ara25/results/: README.md  baseline_metrics.csv
data/: train_audit.json
docs/: AUDIT_FINDINGS.md  Ara25_Technical_Report.md
notebooks/: Ara25_AraT5.ipynb  Ara25_mBERT.ipynb
scripts/: audit_dataset.py  sanitize_notebooks.py
src/ara25/: __init__.py  data.py
tests/: test_data.py
